// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LibraryAsset context provider should provide currentWML 1`] = `
"
<Asset key=(Test)>
    <Import from=(BASE)>
        <Variable key=(basePower) as=(power) />
        <Room key=(DEF) />
    </Import>
    <Feature key=(clockTower)>
        <Description>
            A worn stone clock tower.
        </Description>
    </Feature>
    <Room key=(ABC)>
        <Name>Vortex</Name>
        <Description>
            Vortex
            <Link to=(toggleOpen)>(toggle)</Link>
        </Description>
    </Room>
    <If {open}>
        <Room key=(ABC)>
            <Exit to=(DEF)>welcome</Exit>
        </Room>
    </If>
    <Room key=(DEF)>
        <Name>Welcome</Name>
        <Exit to=(ABC)>vortex</Exit>
    </Room>
    <Variable key=(open) default={false} />
    <Action key=(toggleOpen) src={open = !open} />
</Asset>
"
`;

exports[`LibraryAsset context provider should provide features 1`] = `
<div>
  <div>
    <div>
      <span />
      <span>
        String
      </span>
      <span>
        A worn stone clock tower.
      </span>
    </div>
  </div>
</div>
`;

exports[`LibraryAsset context provider should provide normalForm 1`] = `
"{
    \\"Test\\": {
        \\"key\\": \\"Test\\",
        \\"tag\\": \\"Asset\\",
        \\"instance\\": false,
        \\"Story\\": false,
        \\"appearances\\": [
            {
                \\"data\\": {
                    \\"tag\\": \\"Asset\\",
                    \\"key\\": \\"Test\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Import\\",
                            \\"key\\": \\"Import-0\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Feature\\",
                            \\"key\\": \\"clockTower\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Room\\",
                            \\"key\\": \\"ABC\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"tag\\": \\"If\\"
                        },
                        \\"children\\": [
                            {
                                \\"data\\": {
                                    \\"tag\\": \\"Statement\\",
                                    \\"if\\": \\"open\\"
                                },
                                \\"children\\": [
                                    {
                                        \\"data\\": {
                                            \\"tag\\": \\"Room\\",
                                            \\"key\\": \\"ABC\\",
                                            \\"index\\": 1
                                        },
                                        \\"children\\": []
                                    }
                                ]
                            }
                        ]
                    },
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Room\\",
                            \\"key\\": \\"DEF\\",
                            \\"index\\": 1
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Variable\\",
                            \\"key\\": \\"open\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Action\\",
                            \\"key\\": \\"toggleOpen\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    }
                ],
                \\"contextStack\\": []
            }
        ]
    },
    \\"Import-0\\": {
        \\"key\\": \\"Import-0\\",
        \\"tag\\": \\"Import\\",
        \\"from\\": \\"BASE\\",
        \\"mapping\\": {
            \\"basePower\\": {
                \\"key\\": \\"basePower\\",
                \\"type\\": \\"Variable\\"
            },
            \\"DEF\\": {
                \\"key\\": \\"DEF\\",
                \\"type\\": \\"Room\\"
            }
        },
        \\"appearances\\": [
            {
                \\"data\\": {
                    \\"tag\\": \\"Import\\",
                    \\"mapping\\": {
                        \\"basePower\\": {
                            \\"key\\": \\"basePower\\",
                            \\"type\\": \\"Variable\\"
                        },
                        \\"DEF\\": {
                            \\"key\\": \\"DEF\\",
                            \\"type\\": \\"Room\\"
                        }
                    },
                    \\"from\\": \\"BASE\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Variable\\",
                            \\"key\\": \\"basePower\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    },
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Room\\",
                            \\"key\\": \\"DEF\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    }
                ],
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ]
            }
        ]
    },
    \\"basePower\\": {
        \\"key\\": \\"basePower\\",
        \\"tag\\": \\"Variable\\",
        \\"default\\": \\"\\",
        \\"appearances\\": [
            {
                \\"data\\": {
                    \\"tag\\": \\"Variable\\",
                    \\"key\\": \\"basePower\\",
                    \\"as\\": \\"power\\"
                },
                \\"children\\": [],
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    },
                    {
                        \\"tag\\": \\"Import\\",
                        \\"key\\": \\"Import-0\\",
                        \\"index\\": 0
                    }
                ]
            }
        ]
    },
    \\"DEF\\": {
        \\"key\\": \\"DEF\\",
        \\"tag\\": \\"Room\\",
        \\"appearances\\": [
            {
                \\"data\\": {
                    \\"tag\\": \\"Room\\",
                    \\"key\\": \\"DEF\\"
                },
                \\"children\\": [],
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    },
                    {
                        \\"tag\\": \\"Import\\",
                        \\"key\\": \\"Import-0\\",
                        \\"index\\": 0
                    }
                ]
            },
            {
                \\"data\\": {
                    \\"tag\\": \\"Room\\",
                    \\"key\\": \\"DEF\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Name\\"
                        },
                        \\"children\\": [
                            {
                                \\"data\\": {
                                    \\"tag\\": \\"String\\",
                                    \\"value\\": \\"Welcome\\"
                                },
                                \\"children\\": []
                            }
                        ]
                    },
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Exit\\",
                            \\"key\\": \\"DEF#ABC\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    }
                ],
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ]
            }
        ]
    },
    \\"clockTower\\": {
        \\"key\\": \\"clockTower\\",
        \\"tag\\": \\"Feature\\",
        \\"appearances\\": [
            {
                \\"data\\": {
                    \\"tag\\": \\"Feature\\",
                    \\"key\\": \\"clockTower\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Description\\"
                        },
                        \\"children\\": [
                            {
                                \\"data\\": {
                                    \\"tag\\": \\"String\\",
                                    \\"value\\": \\"A worn stone clock tower.\\"
                                },
                                \\"children\\": []
                            }
                        ]
                    }
                ],
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ]
            }
        ]
    },
    \\"ABC\\": {
        \\"key\\": \\"ABC\\",
        \\"tag\\": \\"Room\\",
        \\"appearances\\": [
            {
                \\"data\\": {
                    \\"tag\\": \\"Room\\",
                    \\"key\\": \\"ABC\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Name\\"
                        },
                        \\"children\\": [
                            {
                                \\"data\\": {
                                    \\"tag\\": \\"String\\",
                                    \\"value\\": \\"Vortex\\"
                                },
                                \\"children\\": []
                            }
                        ]
                    },
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Description\\"
                        },
                        \\"children\\": [
                            {
                                \\"data\\": {
                                    \\"tag\\": \\"String\\",
                                    \\"value\\": \\"Vortex \\"
                                },
                                \\"children\\": []
                            },
                            {
                                \\"data\\": {
                                    \\"tag\\": \\"Link\\",
                                    \\"text\\": \\"(toggle)\\",
                                    \\"to\\": \\"toggleOpen\\"
                                },
                                \\"children\\": [
                                    {
                                        \\"data\\": {
                                            \\"tag\\": \\"String\\",
                                            \\"value\\": \\"(toggle)\\"
                                        },
                                        \\"children\\": []
                                    }
                                ]
                            }
                        ]
                    }
                ],
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ]
            },
            {
                \\"data\\": {
                    \\"tag\\": \\"Room\\",
                    \\"key\\": \\"ABC\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"Exit\\",
                            \\"key\\": \\"ABC#DEF\\",
                            \\"index\\": 0
                        },
                        \\"children\\": []
                    }
                ],
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    },
                    {
                        \\"tag\\": \\"If\\"
                    },
                    {
                        \\"tag\\": \\"Statement\\",
                        \\"if\\": \\"open\\"
                    }
                ]
            }
        ]
    },
    \\"ABC#DEF\\": {
        \\"key\\": \\"ABC#DEF\\",
        \\"tag\\": \\"Exit\\",
        \\"to\\": \\"DEF\\",
        \\"from\\": \\"ABC\\",
        \\"appearances\\": [
            {
                \\"data\\": {
                    \\"tag\\": \\"Exit\\",
                    \\"key\\": \\"ABC#DEF\\",
                    \\"from\\": \\"ABC\\",
                    \\"to\\": \\"DEF\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"String\\",
                            \\"value\\": \\"welcome\\"
                        },
                        \\"children\\": []
                    }
                ],
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    },
                    {
                        \\"tag\\": \\"If\\"
                    },
                    {
                        \\"tag\\": \\"Statement\\",
                        \\"if\\": \\"open\\"
                    },
                    {
                        \\"tag\\": \\"Room\\",
                        \\"key\\": \\"ABC\\",
                        \\"index\\": 1
                    }
                ]
            }
        ]
    },
    \\"DEF#ABC\\": {
        \\"key\\": \\"DEF#ABC\\",
        \\"tag\\": \\"Exit\\",
        \\"to\\": \\"ABC\\",
        \\"from\\": \\"DEF\\",
        \\"appearances\\": [
            {
                \\"data\\": {
                    \\"tag\\": \\"Exit\\",
                    \\"key\\": \\"DEF#ABC\\",
                    \\"from\\": \\"DEF\\",
                    \\"to\\": \\"ABC\\"
                },
                \\"children\\": [
                    {
                        \\"data\\": {
                            \\"tag\\": \\"String\\",
                            \\"value\\": \\"vortex\\"
                        },
                        \\"children\\": []
                    }
                ],
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    },
                    {
                        \\"tag\\": \\"Room\\",
                        \\"key\\": \\"DEF\\",
                        \\"index\\": 1
                    }
                ]
            }
        ]
    },
    \\"open\\": {
        \\"key\\": \\"open\\",
        \\"tag\\": \\"Variable\\",
        \\"default\\": \\"false\\",
        \\"appearances\\": [
            {
                \\"data\\": {
                    \\"tag\\": \\"Variable\\",
                    \\"key\\": \\"open\\",
                    \\"default\\": \\"false\\"
                },
                \\"children\\": [],
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ]
            }
        ]
    },
    \\"toggleOpen\\": {
        \\"key\\": \\"toggleOpen\\",
        \\"tag\\": \\"Action\\",
        \\"src\\": \\"open = !open\\",
        \\"appearances\\": [
            {
                \\"data\\": {
                    \\"tag\\": \\"Action\\",
                    \\"key\\": \\"toggleOpen\\",
                    \\"src\\": \\"open = !open\\"
                },
                \\"children\\": [],
                \\"contextStack\\": [
                    {
                        \\"tag\\": \\"Asset\\",
                        \\"key\\": \\"Test\\",
                        \\"index\\": 0
                    }
                ]
            }
        ]
    }
}"
`;

exports[`LibraryAsset context provider should provide rooms 1`] = `
<div>
  <div>
    <div>
      <span>
        Welcome
      </span>
      <span>
        String
      </span>
      <span>
        A welcome area
      </span>
    </div>
    <div>
      <span>
        Vortex
      </span>
      <span>
        String
      </span>
      <span>
        Vortex 
      </span>
      <span>
        Link
      </span>
      <span>
        toggleOpen
      </span>
    </div>
  </div>
</div>
`;
